# Toxicity_Detector

./: Dockerfile  README.md  pyproject.toml  train.ipynb
conf/data_loading/: data_loading.yaml
conf/logging/: logging.yaml
conf/model/: model.yaml
conf/training/: training.yaml
datasets/: test.csv  val.csv
docs/: conf.py  index.rst
models/: training_results.csv
scripts/: download_data.py
tg_bot/: BotReadme.md  bot.py  bot_requirements.txt  text_predictor.py
tg_bot/responses/: non_toxic_responses.txt  toxic_responses.txt
toxic_detector/: train.py  trainer.py
