[project]
name = "toxic-detector"
version = "0.1.0"
description = "mlops project"
authors = [
    {name = "Timur Ermeshev",email = "you@example.com"}
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
torch = ">=2.5.1,<3.0.0"
transformers = ">=4.47.1,<5.0.0"
pandas = ">=2.2.3,<3.0.0"
pytorch-lightning = ">=2.5.0.post0,<3.0.0"
omegaconf = ">=2.3.0,<3.0.0"
fire = ">=0.7.0,<0.8.0"
hydra-core = ">=1.3.2,<2.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
sphinx = "^8.1.3"
dvc ">=3.58.0,<4.0.0)"

[tool.isort]
src_paths = ["cats_and_dogs"]
profile = "black"
line_length = 90
lines_after_imports = 2

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
